// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo admin account page 1`] = `
[
  <div
    className="top-bar"
  >
    <div
      className="top-bar-left-column"
    >
      <a
        href="http://localhost"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Allen Young's Stockmarket Demo
      </a>
    </div>
    <div
      className="top-bar-center-column"
    >
      Admin Page
    </div>
    <div
      className="top-bar-right-column"
    >
      <a
        href="http://localhost/registration.html"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Register
      </a>
       | 
      <a
        href="http://localhost/login.html"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Login
      </a>
    </div>
  </div>,
  <section
    className="user-list-section"
  >
    <h1
      className="user-list-section-heading"
    >
      User List
    </h1>
    <div
      className="company-stock-transaction-history-div-display"
    >
      No records to show.
    </div>
    <p
      className="company-stock-transaction-history-p-navigation"
    >
      &lt; 1 2 3 … (last page number) &gt;
    </p>
    <form
      className="company-stock-transaction-history-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        disabled={true}
        id="page_number"
        name="page_number"
        size="5"
        type="text"
      />
      <input
        disabled={true}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <section
    className="transaction-list-section"
  >
    <h1
      className="transaction-list-section-heading"
    >
      Transaction List
    </h1>
    <div
      className="company-stock-transaction-history-div-display"
    >
      No records to show.
    </div>
    <p
      className="company-stock-transaction-history-p-navigation"
    >
      &lt; 1 2 3 … (last page number) &gt;
    </p>
    <form
      className="company-stock-transaction-history-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        disabled={true}
        id="page_number"
        name="page_number"
        size="5"
        type="text"
      />
      <input
        disabled={true}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo admin account page 2`] = `
[
  <div
    className="top-bar"
  >
    <div
      className="top-bar-left-column"
    >
      <a
        href="http://localhost"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Allen Young's Stockmarket Demo
      </a>
    </div>
    <div
      className="top-bar-center-column"
    >
      Admin Page
    </div>
    <div
      className="top-bar-right-column"
    >
      <a
        href="http://localhost/account.html"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        My Account
      </a>
       | 
      <a
        href=""
        onClick={[Function]}
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Logout
      </a>
    </div>
  </div>,
  <section
    className="user-list-section"
  >
    <h1
      className="user-list-section-heading"
    >
      User List
    </h1>
    <div
      className="company-stock-transaction-history-div-display"
    >
      No records to show.
    </div>
    <p
      className="company-stock-transaction-history-p-navigation"
    >
      &lt; 1 2 3 … (last page number) &gt;
    </p>
    <form
      className="company-stock-transaction-history-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        disabled={true}
        id="page_number"
        name="page_number"
        size="5"
        type="text"
      />
      <input
        disabled={true}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <section
    className="transaction-list-section"
  >
    <h1
      className="transaction-list-section-heading"
    >
      Transaction List
    </h1>
    <div
      className="company-stock-transaction-history-div-display"
    >
      No records to show.
    </div>
    <p
      className="company-stock-transaction-history-p-navigation"
    >
      &lt; 1 2 3 … (last page number) &gt;
    </p>
    <form
      className="company-stock-transaction-history-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        disabled={true}
        id="page_number"
        name="page_number"
        size="5"
        type="text"
      />
      <input
        disabled={true}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo admin account page 3`] = `
[
  <div
    className="top-bar"
  >
    <div
      className="top-bar-left-column"
    >
      <a
        href="http://localhost"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Allen Young's Stockmarket Demo
      </a>
    </div>
    <div
      className="top-bar-center-column"
    >
      Admin Page
    </div>
    <div
      className="top-bar-right-column"
    >
      <a
        href="http://localhost/account.html"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        My Account
      </a>
       | 
      <a
        href=""
        onClick={[Function]}
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Logout
      </a>
    </div>
  </div>,
  <section
    className="user-list-section"
  >
    <h1
      className="user-list-section-heading"
    >
      User List
    </h1>
    <div
      className="user-list-div-display"
    >
      <table
        className="user-list-table"
      >
        <thead>
          <tr>
            <th>
              User primary key
            </th>
            <th>
              First name
            </th>
            <th>
              Last name
            </th>
            <th>
              Email address
            </th>
            <th>
              Email address verified
            </th>
            <th>
              Phone number
            </th>
            <th>
              Admin
            </th>
            <th>
              User deleted
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
    <p
      className="user-list-p-navigation"
    >
      <a
        href=""
        onClick={[Function]}
        style={
          {
            "color": "rgb(250,250,250)",
            "textDecoration": "none",
          }
        }
      >
        &lt;
      </a>
      <span>
         
      </span>
      <a
        href=""
        onClick={[Function]}
        style={
          {
            "color": "rgb(250,250,250)",
            "textDecoration": "none",
          }
        }
      >
        &gt;
      </a>
    </p>
    <form
      className="user-list-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        id="page_number"
        max={0}
        min="1"
        name="page_number"
        onInput={[Function]}
        size="5"
        step="1"
        type="number"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <section
    className="transaction-list-section"
  >
    <h1
      className="transaction-list-section-heading"
    >
      Transaction List
    </h1>
    <div
      className="transaction-list-div-display"
    >
      <table
        className="transaction-list-table"
      >
        <thead>
          <tr>
            <th>
              User primary key
            </th>
            <th>
              Stock stats table entry primary key
            </th>
            <th>
              Transaction start datetime
            </th>
            <th>
              Transaction end datetime
            </th>
            <th>
              PayPal transaction (order) ID
            </th>
            <th>
              Company stock transaction ID
            </th>
            <th>
              Number of shares
            </th>
            <th>
              Payment processing initiated
            </th>
            <th>
              Payment processing completed
            </th>
            <th>
              Payment processing status
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
    <p
      className="transaction-list-p-navigation"
    >
      <a
        href=""
        onClick={[Function]}
        style={
          {
            "color": "#36454F",
            "textDecoration": "none",
          }
        }
      >
        &lt;
      </a>
      <span>
         
      </span>
      <a
        href=""
        onClick={[Function]}
        style={
          {
            "color": "#36454F",
            "textDecoration": "none",
          }
        }
      >
        &gt;
      </a>
    </p>
    <form
      className="transaction-list-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        id="page_number"
        max={0}
        min="1"
        name="page_number"
        onInput={[Function]}
        size="5"
        step="1"
        type="number"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo admin account page 4`] = `
[
  <div
    className="top-bar"
  >
    <div
      className="top-bar-left-column"
    >
      <a
        href="http://localhost"
        style={
          {
            "color": "rgb(255,255,255)",
            "textDecoration": "none",
          }
        }
      >
        Allen Young's Stockmarket Demo
      </a>
    </div>
    <div
      className="top-bar-center-column"
    >
      Admin Page
    </div>
    <div
      className="top-bar-right-column"
    >
      <div>
        Network error.  Please retry later.
      </div>
    </div>
  </div>,
  <section
    className="user-list-section"
  >
    <h1
      className="user-list-section-heading"
    >
      User List
    </h1>
    <div
      className="company-stock-transaction-history-div-display"
    >
      No records to show.
    </div>
    <p
      className="company-stock-transaction-history-p-navigation"
    >
      &lt; 1 2 3 … (last page number) &gt;
    </p>
    <form
      className="company-stock-transaction-history-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        disabled={true}
        id="page_number"
        name="page_number"
        size="5"
        type="text"
      />
      <input
        disabled={true}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <section
    className="transaction-list-section"
  >
    <h1
      className="transaction-list-section-heading"
    >
      Transaction List
    </h1>
    <div
      className="company-stock-transaction-history-div-display"
    >
      No records to show.
    </div>
    <p
      className="company-stock-transaction-history-p-navigation"
    >
      &lt; 1 2 3 … (last page number) &gt;
    </p>
    <form
      className="company-stock-transaction-history-form"
    >
      <label
        htmlFor="page_number"
      >
        Page
      </label>
      <input
        disabled={true}
        id="page_number"
        name="page_number"
        size="5"
        type="text"
      />
      <input
        disabled={true}
        type="button"
        value="Go to"
      />
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;
